# steamback

./: .gitignore  LICENSE  README  README.md  TODO.md  development.md  main.py  package-lock.json  package.json  plugin.json  pnpm-lock.yaml  py_modules  pyproject.toml  rollup.config.js
.github/: dependabot.yml
defaults/py_modules/steamback/: __init__.py  __main__.py  gui.py  test.py  util.py
doc/: TODO.md  desktop.md  development.md  subnautica-remotecache.vdf  xcom2-remotecache.vdf
doc/steamback/: gui.html  index.html  test.html  util.html
py_modules/steamback/: __init__.py  __main__.py  gui.py  test.py  util.py
pytest/: simgameinfo.json  simloader.py
src/: index.tsx
steamback/: __init__.py  __main__.py  test.py  util.py
tests/: fonttest.py  runtest.sh
