[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steamback"
version = "0.3.0"
authors = [
  { name="Kevin Hester", email="kevinh@geeksville.com" },
]
description = "A python library and tool for backing up Steam save games"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "platformdirs ~= 3.1.0",
    "psutil ~= 5.9.1",
    "async-tkinter-loop ~= 3.4.3",
    "sv-ttk ~= 2.4",
    "timeago ~= 1.0.16",
    "Pillow ~= 9.2.0"
]

[project.urls]
"Homepage" = "https://github.com/geeksville/steamback"
"Bug Tracker" = "https://github.com/geeksville/steamback/issues"