[project]
name = "steamback"
version = "1.0.0"
authors = [
  { name="Kevin Hester", email="kevinh@geeksville.com" },
]
description = "A python library and tool for backing up Steam save games"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "platformdirs >= 3.1,< 4.3",
    "psutil ~= 5.9.1",
    "async-tkinter-loop ~= 0.7.0",
    "sv-ttk ~= 2.4",
    "timeago ~= 1.0.16",
    "Pillow >= 9.2,< 9.5"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["py_modules"]  # list of folders that contain the packages (["."] by default)
include = ["steamback*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
"*" = ["*.png"]

[project.scripts]
steamback = "steamback.__main__:main"

[project.urls]
"Homepage" = "https://github.com/geeksville/steamback"
"Bug Tracker" = "https://github.com/geeksville/steamback/issues"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"
