
[tool.poetry]
name = "steamback"
version = "1.1.0"
description = "A python library and tool for backing up Steam save games"
authors = [
  "Kevin Hester <kevinh@geeksville.com>"
  ]
license = "GPL-3.0-or-later"
repository = "https://github.com/geeksville/steamback"
readme = "README.md"
packages = [
    { include = "steamback", from = "py_modules" },
]

[tool.poetry.scripts]
steamback = "steamback.__main__:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/geeksville/steamback/issues"

[tool.poetry.dependencies]
python = "^3.11"
platformdirs = "^4.0.0"
pillow = "^10.1.0"
psutil = "^5.9.1"
async-tkinter-loop = "^0.7.0"
sv-ttk = "^2.4"
timeago = "^1.0.16"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.package-data]
"*" = ["*.png"]